add post install script.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,6 @@
 	"image": "mcr.microsoft.com/devcontainers/universal:2",
 	"features": {
 		"ghcr.io/va-h/devcontainers-features/uv:1": {}
-	}
+	},
+	"postCreateCommand": "bash scripts/install-dependencies.sh"
 }
